tools/flowc/tests/errors/error1.flow
Maybe<?> ::= None, Some<?>;
None();
Some(value : ?);

foo(a : Some<?>) {
	a.value;
}

// foo2 = debugtyping;

goo() {
	foo(None());
}
